--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="wrapper">
             <header>
-                <a href="#"><img class="logo-img" src="../logo.png" alt="logo"></a>
+                <a href="#"><img class="logo-img" src="./images/logo.png" alt="logo"></a>
                 <nav>
                     <ul class="list">
                        <li><a href="#"> Home</a></li>
@@ -24,7 +24,7 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
                     <a class="read-more-botton" href="#">READ MORE</a>
                 </div>
-                <div class="image"><img src="../Image-1 (1).png" alt="image"></div>
+                <div class="image"><img src="./images/Image-1 (1).png" alt="image"></div>
             </div>
         </div>
     </body>
